# stageflow-rust

./: ARCHITECTURE_REVIEW.md  Cargo.toml  README.md  STAGEFLOW_RUST_PORT_CHECKLIST.md
.github/workflows/: ci.yml
stageflow/: Cargo.toml
stageflow-py/: Cargo.toml
stageflow-py/src/: lib.rs
stageflow/benches/: pipeline_bench.rs
stageflow/src/: errors.rs  lib.rs
stageflow/src/cancellation/: cleanup.rs  mod.rs  task_group.rs  token.rs
stageflow/src/compression/: mod.rs
stageflow/src/context/: bags.rs  context_tests.rs  execution.rs  identity.rs  inputs.rs  mod.rs  snapshot.rs
stageflow/src/contracts/: errors.rs  mod.rs  registry.rs  suggestions.rs  typed_output.rs
stageflow/src/core/: artifact.rs  event.rs  mod.rs  output.rs  output_tests.rs  status.rs
stageflow/src/events/: backpressure.rs  mod.rs  sink.rs
stageflow/src/helpers/: analytics.rs  guardrails.rs  memory.rs  mocks.rs  mod.rs  providers.rs  runtime.rs  streaming.rs  timestamps.rs  uuid_utils.rs
stageflow/src/interceptors/: chain.rs  hardening.rs  idempotency.rs  mod.rs  retry.rs
stageflow/src/observability/: mod.rs  tracing.rs  wide_events.rs
stageflow/src/pipeline/: builder.rs  builder_helpers.rs  cancellation.rs  dag.rs  failure_tolerance.rs  guard_retry.rs  idempotency.rs  integration_tests.rs  interfaces.rs  mod.rs  retry.rs  spec.rs  unified.rs
stageflow/src/stages/: mod.rs  ports.rs  result.rs
stageflow/src/subpipeline/: mod.rs  result.rs  spawner.rs  tracker.rs
stageflow/src/testing/: assertions.rs  fixtures.rs  mocks.rs  mod.rs
stageflow/src/tools/: approval.rs  definitions.rs  errors.rs  executor.rs  mod.rs  registry.rs  undo.rs
stageflow/src/utils/: mod.rs  timestamps.rs  uuid_utils.rs  validation.rs
stageflow/src/websearch/: config.rs  mod.rs  models.rs  protocols.rs  run_utils.rs
