[workspace]
resolver = "2"
members = [
    "stageflow",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Stageflow Contributors"]
license = "MIT"
repository = "https://github.com/stageflow/stageflow-rust"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "sync", "time", "rt-multi-thread", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing
md-5 = "0.10"
base64 = "0.22"

# Regex
regex = "1.10"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Testing
pretty_assertions = "1.4"
tokio-test = "0.4"
mockall = "0.13"
criterion = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
